test/fail_compilation/imports/import18517a.d
module import18517b;
